--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^17.0.0",
+    "@supabase/supabase-js": "^2.48.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
